# starlette-template

./: .dockerignore  .env-defaults  .env_compose  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  Taskfile.yml  alembic.ini  build.js  compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: build.yml
alembic/: env.py
alembic/versions/: 00000_initial.py  202410161034-users.py  202410211411-users.py  202410291846-users.py  202410291955-teams.py  202410301048-subscriptions.py  202411021813-users.py  202411031718-teams.py  202411031719-subscriptions.py  202411142211-subscription.py  202412032115-refresh_tokens.py
app/: __init__.py  __main__.py  asgi.py  error_codes.py  error_handlers.py  exceptions.py
app/cli/: __init__.py  app.py  locale.py  mails.py  queue.py  seed.py  settings.py  stripe.py
app/config/: cache.py  crypt.py  crypto.py  database.py  dependencies.py  environment.py  events.py  files.py  logging.py  mailers.py  metrics.py  pagination.py  queues.py  rate_limit.py  redis.py  seed.py  sentry.py  settings.py  templating.py  templating_context.py
app/config/permissions/: context.py  decorators.py  guards.py  permissions.py  rules.py
app/config/sqla/: columns.py  migrations.py  models.py  types.py
app/contexts/auth/: authentication.py  events.py  exceptions.py  mails.py  models.py  passwords.py  repos.py  social.py  tokens.py
app/contexts/billing/: exceptions.py  middleware.py  models.py  repo.py  stripe.py
app/contexts/register/: exceptions.py  mails.py  registration.py  verification.py
app/contexts/subscriptions/: models.py  repo.py
app/contexts/teams/: exceptions.py  mails.py  middleware.py  models.py  repo.py  utils.py
app/contexts/users/: filters.py  models.py  repo.py
app/contrib/: events.py  forms.py  htmx.py  permissions.py  storage.py  testing.py  urls.py  utils.py
app/contrib/cache/: __init__.py
app/contrib/cache/backends/: memory.py  redis.py
app/http/: asgi.py  dependencies.py  error_handlers.py  exceptions.py  responses.py
app/http/api/: app.py  dependencies.py  error_handlers.py  schemas.py  types.py
app/http/api/auth/: routes.py  schemas.py
app/http/api/profile/: routes.py  schemas.py
app/http/api/register/: routes.py  schemas.py
app/http/web/: app.py
app/http/web/auth/: routes.py
app/http/web/billing/: routes.py  routes_stripe.py  routes_stripe_public.py
app/http/web/internal/: routes.py
app/http/web/profile/: routes.py
app/http/web/register/: routes.py
app/http/web/teams/: forms.py  routes.py
app/resources/locale/: messages.pot
app/resources/locale/en/LC_MESSAGES/: messages.po
app/resources/templates/layouts/: app.html  auth.html  base.html  base_mail.html
app/resources/templates/lib/: forms.html  pagination.html  social.html
app/resources/templates/lib/forms/: checkbox.html  field_errors.html  field_help.html  input.html  (+2 more)
app/resources/templates/mails/: account_deleted.html  password_changed.html  reset_password.html  team_invite.html  team_invite_accepted.html  verify_email.html
app/resources/templates/theme/: flowbite.macro.html
app/web/: app.py  version.py
app/web/auth/: forms.py  routes.py
app/web/billing/: routes.py  routes_stripe.py  routes_stripe_public.py
app/web/dashboard/: routes.py
app/web/internal/: routes.py
app/web/login/: forms.py  mails.py  routes.py
app/web/profile/: forms.py  routes.py
app/web/register/: forms.py  routes.py
app/web/teams/: forms.py  routes.py
assets/: cookies.ts  main.ts  theme.ts
assets/components/: index.ts  modals.ts  popover.ts
assets/css/: article.css  email.css  flowbite.css  main.css  tailwind.css
assets/public/: manifest.json
deploy/docker/: docker-healthcheck.sh  docker-run.sh  queue-worker.sh
scripts/: compose-noconflict.sh  docker-build.sh  run-isolated-tests.sh  test.sh  testcover.sh  testdbsync.sh
tests/: conftest.py  database.py  factories.py  test_exceptions.py  utils.py
tests/config/: test_cache.py  test_crypt.py  test_mailers.py
tests/contexts/auth/: test_authentication.py  test_guards.py
tests/contrib/: test_htmx.py  test_urls.py
tests/contrib/cache/: test_cache.py
tests/contrib/storages/: test_factory.py  test_storage.py
tests/test_config/: test_crypt.py  test_mailers.py  test_templates.py
tests/test_config/test_permissions/: test_context.py  test_decorators.py  test_guards.py  test_rules.py
tests/test_config/test_sqla/: test_types.py
tests/test_contexts/test_auth/: test_authentication.py  test_jwt_tokens.py
tests/test_contexts/test_billing/: factories.py  test_models.py  test_stripe.py
tests/test_contexts/test_teams/: test_middleware.py  test_models.py
tests/test_contexts/test_users/: test_models.py
tests/test_contrib/: test_events.py  test_permissions.py  test_urls.py
tests/test_http/: test_error_handlers.py  test_exceptions.py
tests/test_http/test_api/: test_error_handlers.py
tests/test_http/test_api/register/: test_register.py
tests/test_http/test_api/test_auth/: test_login.py  test_refresh_token.py  test_reset_password.py
tests/test_http/test_api/test_profile/: test_profile.py
tests/test_http/test_web/: test_security.py
tests/test_http/test_web/test_auth/: test_login.py  test_reset_password.py
tests/test_http/test_web/test_internal/: test_routes.py
tests/test_http/test_web/test_profile/: test_profile.py
tests/test_http/test_web/test_register/: test_registration.py
tests/test_http/test_web/test_teams/: test_invites.py  test_members.py  test_roles.py  test_routes.py
tests/test_web/: test_security.py
tests/test_web/test_auth/: test_login.py
tests/test_web/test_register/: test_confirmation.py  test_registration.py
tests/test_web/test_teams/: test_invites.py  test_members.py  test_roles.py  test_routes.py
tests/web/auth/: test_login.py  test_reset_password.py
tests/web/profile/: test_profile.py
tests/web/register/: test_registration.py
tests/web/test_auth/: test_login.py  test_logout.py  test_reset_password.py  test_social.py
tests/web/test_profile/: test_profile.py
(+55 files in other folders)
